--- a/daftar_belanja/pubspec.yaml
+++ b/daftar_belanja/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.12.1
+  firebase_core: ^3.13.0
   firebase_database: ^11.3.4
+  firebase_auth: ^5.5.2
 
 dev_dependencies:
   flutter_test:
