--- a/fasum/pubspec.yaml
+++ b/fasum/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   firebase_app_check: ^0.3.2+5
+  geolocator: ^14.0.0
+  image_picker: ^1.1.2
+  flutter_image_compress: ^2.4.0
+  google_generative_ai: ^0.4.7
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
