--- a/fasum/android/app/src/main/AndroidManifest.xml
+++ b/fasum/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACEESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACEESS_COARSE_LOCATION"/>
     <application
         android:label="fasum"
         android:name="${applicationName}"
